--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-size: 16px; /* Base font size */
+    line-height: 1.6; /* Line height for better readability */
 }
 
 .container {
@@ -24,6 +26,8 @@ body {
 
 .header {
     padding: 1em;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
     background-color: rgba(139, 148, 103, 0.5);
 }
 
@@ -45,10 +49,15 @@ body {
     color: #FFFFFF;
     text-decoration: none;
     margin: 0 10px;
+    transition: color 0.3s ease; /* Smooth transition for hover effect */
 }
 
 .nav a:hover {
     color: #F7DC6F;
+}
+
+.nav a:focus {
+    outline: 2px solid #F7DC6F; /* Focus style for accessibility */
 }
 
 .main {
@@ -56,12 +65,10 @@ body {
     background-color: #F7F4E9;
 }
 
-/* Remove list style for ordered lists */
 ol {
     list-style-type: none;
 }
 
-/* Media Queries for Responsive Design */
 @media (max-width: 768px) {
     .header h1 {
         font-size: 2em;
